--- a/views/home.erb
+++ b/views/home.erb
@@ -14,7 +14,7 @@
       <meta name="author" content="">
       <meta name="theme-color" content="#fafafa">
       <!-- bootstrap css -->
-      <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
       <!-- style css -->
       <link rel="stylesheet" type="text/css" href="/css/style.css">
       <!-- Responsive-->
@@ -73,7 +73,6 @@
                            <a href="#">Read More</a>
                         </div>
                      </div>
-                     
                   </div>
                </div>
             </section>
@@ -92,7 +91,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="about_box">
-                        <p>An alarming 13.7% of the elderly population suffer from dementia, a deadly neurological disorder. We would like to improve their lives through Muzartt, a music and art therapy app which provides emotional and behavioral benefits for dementia patients, relieving their stress and agitation.</p>
+                        <p>According to the WHO, an alarming 50 million people have dementia, a syndrome encompassing severe memory, thinking, and behavior loss. <br> Founded by five passionate high school entrepreneurs at the MIT LaunchX program aspiring to make a difference, Muzartt is an app that provides emotion. </p>
                         <a class="read_more" href="#">Read more</a>
                     </div>
                 </div>
@@ -116,12 +115,33 @@
             <div class="row d_flex">
                <div class="col-md-4">
                         <div class="usp_box">
-                           <figure><img src="images/ex.jpg" alt="#"/></figure>
+                           <figure><img src="images/Drawing&Dancing.JPG" alt="#"/></figure>
                         </div>
                      </div>
                      <div class="col-md-8">
                         <div class="usp_box">
-                           <h3>Something</h3>
+                           <h3>Platform for BOTH music and art therapy</h3>
+                              <p>
+                                 Apps for music therapy and art therapy exist. However, there is yet to be an app that has both music and art therapy offered in one for dementia patients and older adults.
+                                 <br>And here's where we come in— Muzartt.
+                                 <br>For music therapy, it will include numerous different playlists and even customizable ones too. There, users can sing along to karaoke songs or simply just listen to calming music that is proven to be stimulating and relaxing. 
+                                 <br>For art therapy, users can paint, draw or color based on the specific prompts that helps jog the memory of elderly individuals.
+                              </p>
+                           <a class="read_more" href="#">Read more</a>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+                <div class="black_bg">
+            <div class="row d_flex">
+               <div class="col-md-4">
+                        <div class="usp_box">
+                           <figure><img src="images/Art&Music.JPG" alt="#"/></figure>
+                        </div>
+                     </div>
+                     <div class="col-md-8">
+                        <div class="usp_box">
+                           <h3>User-friendly UI</h3>
                            <p>Something.</p>
                            <a class="read_more" href="#">Read more</a>
                         </div>
@@ -137,23 +157,7 @@
                      </div>
                      <div class="col-md-8">
                         <div class="usp_box">
-                           <h3>Something</h3>
-                           <p>Something.</p>
-                           <a class="read_more" href="#">Read more</a>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-                <div class="black_bg">
-            <div class="row d_flex">
-               <div class="col-md-4">
-                        <div class="usp_box">
-                           <figure><img src="images/ex.jpg" alt="#"/></figure>
-                        </div>
-                     </div>
-                     <div class="col-md-8">
-                        <div class="usp_box">
-                           <h3>Something</h3>
+                           <h3>Cheap and Affordable</h3>
                            <p>Something.</p>
                            <a class="read_more" href="#">Read more</a>
                         </div>
@@ -161,13 +165,12 @@
                   </div>
                </div>
             </div>
-                 
             </div>
          </div>
       </div>
       <!-- Testimonial -->
-          <div id="" class="Testimonial">
-              <div class="container">
+      <div id="" class="Testimonial">
+            <div class="container">
                <div class="row">
                   <div class="col-md-12">
                      <div class="titlepage">
@@ -177,7 +180,6 @@
                   </div>
                </div>
             </div>
-         </div>
          <div id="myCarousel" class="carousel slide Testimonial_carousel" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -191,7 +193,7 @@
                 <div class="row d_flex">
                   <div class="col-md-3">
                      <div class="Testimonial_box">
-                        <i><img src="images/ppl.png" alt="#"/></i>
+                        <i><img src="images/grandma.jpg" alt="#"/></i>
                      </div>
                   </div>
                   <div class="col-md-9">
@@ -210,7 +212,7 @@
                <div class="row d_flex">
                   <div class="col-md-3">
                      <div class="Testimonial_box">
-                        <i><img src="images/ppl.png" alt="#"/></i>
+                        <i><img src="images/grandpa.jpg" alt="#"/></i>
                      </div>
                   </div>
                   <div class="col-md-9">
@@ -229,7 +231,7 @@
                <div class="row d_flex">
                   <div class="col-md-3">
                      <div class="Testimonial_box">
-                        <i><img src="images/ppl.png" alt="#"/></i>
+                        <i><img src="images/chelo.jpg" alt="#"/></i>
                      </div>
                   </div>
                   <div class="col-md-9">
@@ -250,37 +252,37 @@
           <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
         </a>
       </div>
-
       </div>
-     
-      <!-- end Testimonial -->
-      <!-- talk -->
+      <!-- contact -->
       <div id="talk" class="talk">
          <div class="container">
             <div class="row ">
                <div class="col-md-6 ">
-                  <div class="wines">
-                     <h3>Contact Us</h3>
-                     <p>A tap away from digital music and art therapy, Muzartt. Ask anything anytime to the modern Mozart of health.</p>
+                  <div class="contact">
+                     <h3>Subscribe to Our Mailing List!</h3>
+                     <p>
+                        A tap away from digital music and art therapy, Muzartt. Ask anything anytime to the modern Mozart of health! 
+                        <br>An alarming 13.7% of the elderly population suffer from dementia, a deadly neurological disorder. We would like to improve their lives through Muzartt, a music and art therapy app which provides emotional and behavioral benefits for dementia patients, relieving their stress and agitation.
+                     </p>
                   </div>
                </div>
-               <div class="col-md-6 ">
-                  <form class="main_form ">
+               <div class="col-md-6">
+                  <form action="/mailing_list" method="post" class="main_form">
                      <div class="row">
-                        <div class="col-md-12 ">
-                           <input class="form_contril" placeholder="Name " type="text" name="Name ">
+                        <div class="col-md-12">
+                           <input type="text" name="name" placeholder="Name" class="form_contril" required>
                         </div>
                         <div class="col-md-12">
-                           <input class="form_contril" placeholder="Phone Number" type="text" name=" Phone Number">
+                           <input type="text" name="phone_number" placeholder="Phone Number" class="form_contril">
                         </div>
                         <div class="col-md-12">
-                           <input class="form_contril" placeholder="Email" type="text" name="Email">
+                           <input type="text" name="email" placeholder="Email" class="form_contril" required>
                         </div>
                         <div class="col-md-12">
-                           <textarea class="textarea" placeholder="Message" type="text" name="Message"></textarea>
+                           <textarea type="text" name="message" placeholder="Any Message You Have!" class="textarea"></textarea>
                         </div>
                         <div class="col-sm-12">
-                           <button class="send_btn">Send</button>
+                           <input type="submit" value="Subscribe" class="send_btn"></input>
                         </div>
                      </div>
                   </form>
@@ -288,7 +290,6 @@
             </div>
          </div>
       </div>
-      <!-- end talk -->
       <!--  footer -->
             <footer>
          <div class="footer">
@@ -302,7 +303,6 @@
             </div>
          </div>
       </footer>
-      <!-- end footer -->
       <!-- Javascript files-->
       <script src="js/jquery.min.js"></script>
       <script src="js/popper.min.js"></script>
