added 2 more usp

--- a/views/home.erb
+++ b/views/home.erb
@@ -91,7 +91,11 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="about_box">
-                        <p>According to the WHO, an alarming 50 million people have dementia, a syndrome encompassing severe memory, thinking, and behavior loss. <br> Founded by five passionate high school entrepreneurs at the MIT LaunchX program aspiring to make a difference, Muzartt is an app that provides emotion. </p>
+                        <p>
+                           According to the WHO, an alarming 50 million people have dementia, a syndrome encompassing severe memory, thinking, and behavior loss. 
+                           <br>Founded by five passionate high school entrepreneurs at the MIT LaunchX program aspiring to make a difference, Muzartt is an app that provides emotion.
+                           <br>So what are you waiting for? Your grandparents are only a tap away from digital music and art therapy.
+                        </p>
                         <a class="read_more" href="#">Read more</a>
                     </div>
                 </div>
@@ -142,7 +146,9 @@
                      <div class="col-md-8">
                         <div class="usp_box">
                            <h3>User-friendly UI</h3>
-                           <p>Something.</p>
+                           <p>
+                              Being an iPad application purposely designed with easy navigation, older adults will have no problem understanding and using our software. With a visually appealing interface and seamless functionality, older adults can rely on our product to fulfill their needs and expectations.
+                           </p>
                            <a class="read_more" href="#">Read more</a>
                         </div>
                      </div>
@@ -157,8 +163,10 @@
                      </div>
                      <div class="col-md-8">
                         <div class="usp_box">
-                           <h3>Cheap and Affordable</h3>
-                           <p>Something.</p>
+                           <h3>Keeping the brain trained</h3>
+                           <p>
+                              Active participation in creative activities has been shown to improve both physical and mental health for seniors. Engaging in these activities helps stimulate the senses, boost mood and trigger positive feelings while relieving them of stress and anxiety. Additionally, our music and art therapy exercises assist older adults in retaining their memories by recalling memories and feelings from the past. 
+                           </p>
                            <a class="read_more" href="#">Read more</a>
                         </div>
                      </div>
