--- a/views/layout.erb
+++ b/views/layout.erb
@@ -34,17 +34,17 @@
                     Others
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#">Mission</a></li>
+                    <li><a class="dropdown-item" href="#">Mission Statement</a></li>
                     <li><a class="dropdown-item" href="https://docs.google.com/forms/d/e/1FAIpQLScM3Jh6L9kgZnHwSybwpHzWlKA3rOGPg92Szm2KwhjIKDn0Yg/viewform">Survey</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">Smth</a></li>
+                    <li><a class="dropdown-item" href="#">News</a></li>
                   </ul>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" target="_blank" href="https://www.instagram.com/muzarttapp/">Instagram</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Bruh</a>
+                  <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Facebook</a>
                 </li>
               </ul>
               <!--If the user is logged in and if the user is not logged in-->
