--- a/views/home.erb
+++ b/views/home.erb
@@ -85,6 +85,7 @@
                <div class="col-md-12">
                   <div class="titlepage">
                      <h2>About <span class="blue"> Muzartt</span></h2>
+                     <p>The mission of Muzartt is to provide emotional and behavioral benefits for dementia patients and older adults through digital music and art therapy.</p>
                   </div>
                </div>
             </div>
@@ -93,7 +94,7 @@
                     <div class="about_box">
                         <p>
                            According to the WHO, an alarming 50 million people have dementia, a syndrome encompassing severe memory, thinking, and behavior loss. 
-                           <br>Founded by five passionate high school entrepreneurs at the MIT LaunchX program aspiring to make a difference, Muzartt is an app that provides emotion.
+                           <br>Founded by five passionate high school entrepreneurs at the MIT LaunchX program aspiring to make a difference, Muzartt is an app that provides emotion and behavioral benefits.
                            <br>So what are you waiting for? Your grandparents are only a tap away from digital music and art therapy.
                         </p>
                         <a class="read_more" href="#">Read more</a>
@@ -158,7 +159,7 @@
             <div class="row d_flex">
                <div class="col-md-4">
                         <div class="usp_box">
-                           <figure><img src="images/ex.jpg" alt="#"/></figure>
+                           <figure><img src="images/brain_training.jpg" alt="#"/></figure>
                         </div>
                      </div>
                      <div class="col-md-8">
