added facebook link

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -44,7 +44,7 @@
                   <a class="nav-link" target="_blank" href="https://www.instagram.com/muzarttapp/">Instagram</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Facebook</a>
+                  <a class="nav-link" href="https://www.facebook.com/profile.php?id=100070107505331" tabindex="-1" aria-disabled="true">Facebook</a>
                 </li>
               </ul>
               <!--If the user is logged in and if the user is not logged in-->
