--- a/views/home.erb
+++ b/views/home.erb
@@ -94,7 +94,7 @@
                     <div class="about_box">
                         <p>
                            According to the WHO, an alarming 50 million people have dementia, a syndrome encompassing severe memory, thinking, and behavior loss. 
-                           <br>Founded by five passionate high school entrepreneurs at the MIT LaunchX program aspiring to make a difference, Muzartt is an app that provides emotion and behavioral benefits.
+                           <br>Founded by five passionate high school entrepreneurs at the MIT LaunchX program with support of Harvard Business School, aspiring to make a difference, Muzartt is an app that provides emotion and behavioral benefits.
                            <br>So what are you waiting for? Your grandparents are only a tap away from digital music and art therapy.
                         </p>
                         <a class="read_more" href="#">Read more</a>
