--- a/public/css/style.css
+++ b/public/css/style.css
@@ -158,6 +158,13 @@ img {
      height: auto;
 }
 
+.text-img img {
+     max-width: 50%;
+     display: block;
+     margin-left: auto;
+     margin-right: auto;
+}
+
  :focus {
      outline: 0;
 }
