--- a/views/home.erb
+++ b/views/home.erb
@@ -64,7 +64,7 @@
                   <div class="row">
                      <div class="col-md-10 offset-md-1">
                         <div class="text-img">
-                           <figure><img src="images/art-and-music.png" alt="#"/></figure>
+                           <figure><img src="images/muzarttgraphics.png" alt="#"/></figure>
                         </div>
                      </div>
                      <div class="col-md-12">
