--- a/public/css/music_player.css
+++ b/public/css/music_player.css
@@ -5,11 +5,11 @@
 }
 
 .music_player_body {
-  background-image: linear-gradient(
-    0deg,
-    rgba(247, 247, 247, 1) 23.8%,
-    rgba(252, 221, 221, 1) 92%
-  );
+  /*background-image: linear-gradient(*/
+  /*  0deg,*/
+  /*  rgba(247, 247, 247, 1) 23.8%,*/
+  /*  rgba(252, 221, 221, 1) 92%*/
+  /*);*/
   height: 25vh;
   display: flex;
   flex-direction: column;
@@ -143,4 +143,11 @@
   height: 100%;
   width: 0%;
   transition: width 0.1s linear;
+}
+
+.wrap_youtube {
+  text-align: center;
+}
+.youtube {
+  max-width: 100%;
 }
