added sign at the top

--- a/views/home.erb
+++ b/views/home.erb
@@ -39,6 +39,10 @@
       <div class="loader_bg">
          <div class="loader"><img src="/images/loading.gif" alt="#" /></div>
       </div>
+      <!--Sign-->
+      <div class="sign">
+         <p>Sign up to gain special access to a sneak peak of what our app has to offer!↗</p>
+      </div>
       <!-- header -->
       <header>
          <!-- header inner -->
