--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,6 +44,16 @@ body {
      font-weight: normal;
 }
 
+.sign p {
+     margin-top: 8px;
+     font-weight: bold;
+     text-align: center;
+     font-size: 25px;
+     font-family: monaco, monospace;
+     color: blue;
+     text-shadow: 2px 2px red;
+}
+
 a {
      color: #1f1f1f;
      text-decoration: none !important;
