edited about section

--- a/views/home.erb
+++ b/views/home.erb
@@ -98,8 +98,8 @@
                     <div class="about_box">
                         <p>
                            According to the WHO, an alarming 50 million people have dementia, a syndrome encompassing severe memory, thinking, and behavior loss. 
-                           <br>Founded by five passionate high school entrepreneurs at the MIT LaunchX program with support of Harvard Business School, aspiring to make a difference, Muzartt is an app that provides emotion and behavioral benefits.
-                           <br>So what are you waiting for? Your grandparents are only a tap away from digital music and art therapy.
+                           <br> Founded by five passionate high school entrepreneurs at the MIT LaunchX program with the support of Harvard Business School, Muzartt is an app that provides emotional and behavioral benefits to both dementia patients and older adults. 
+                           <br> So what are you waiting for? Whether it be your parents, grandparents, or relatives, they are only a tap away from digital music and art therapy.
                         </p>
                         <a class="read_more" href="#">Read more</a>
                     </div>
