edited mailing list part

--- a/views/home.erb
+++ b/views/home.erb
@@ -274,8 +274,8 @@
                   <div class="contact">
                      <h3>Subscribe to Our Mailing List!</h3>
                      <p>
-                        A tap away from digital music and art therapy, Muzartt. Ask anything anytime to the modern Mozart of health! 
-                        <br>An alarming 13.7% of the elderly population suffer from dementia, a deadly neurological disorder. We would like to improve their lives through Muzartt, a music and art therapy app which provides emotional and behavioral benefits for dementia patients, relieving their stress and agitation.
+                        An alarming 13.7% of the elderly population suffer from dementia, a deadly neurological disorder. With Muzartt’s mission to be the modern Mozart of healthcare, we provide digital music and art therapy for dementia patients and older adults anytime, anywhere. 
+                        <br>Want to stay updated about our app and receive exclusive information? Subscribe to Muzartt’s mailing list!
                      </p>
                   </div>
                </div>
