added 3 classic music and edited script part at head

--- a/views/platform.erb
+++ b/views/platform.erb
@@ -31,11 +31,12 @@
                 </div>
               </div>
         
-              <audio src="/music/The_Fat_Rat.mp3" id="audio"></audio>
-              <audio src="/music/phony.mp3" id="audio"></audio>
+              <audio src="/music/Moonlight_Sonata_3rd_Movement.mp3" id="audio"></audio>
+              <audio src="/music/Chopin_Etude_Op.10_No.4.mp3" id="audio"></audio>
+              <audio src="/music/Czerny_op.740_No.50.mp3" id="audio"></audio>
         
               <div class="img-container">
-                <img src="/images/The_Fat_Rat.jpg", "/images/phony.jpg" alt="music-cover" id="cover"/>
+                <img src="/images/Moonlight_Sonata_3rd_Movement.png", "/images/Chopin_Etude_Op.10_No.4.png", "/images/Czerny_op.740_No.50.png" alt="music-cover" id="cover"/>
               </div>
               <div class="navigation">
                 <button id="prev" class="action-btn">
