--- a/views/layout.erb
+++ b/views/layout.erb
@@ -64,7 +64,7 @@
           </div>
         </nav>
       
-      <!--Need this to have collapsed menu work-->
+      <!--Need this to have collapsed menu and "others" to work-->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
       
       <!--Contents respect to each erb-->
