mission statement working, designed with 100vh and translation of -50 50

--- a/views/mission_statement.erb
+++ b/views/mission_statement.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <link rel="stylesheet" href="/css/style.css">
-<link rel="stylesheet" href="/css/offer.css">
+<link rel="stylesheet" href="/css/mission_statement.css">
 
 <body class="main-layout">
     <div class="mission_statement">
