--- a/views/layout.erb
+++ b/views/layout.erb
@@ -37,10 +37,11 @@
                     Others
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#">Mission Statement</a></li>
-                    <li><a class="dropdown-item" href="https://docs.google.com/forms/d/e/1FAIpQLScM3Jh6L9kgZnHwSybwpHzWlKA3rOGPg92Szm2KwhjIKDn0Yg/viewform">Survey</a></li>
+                    <li><a class="dropdown-item" href="/mission_statement">Mission Statement</a></li>
+                    <li><a class="dropdown-item" href="/offer">Offers</a></li>
+                    <li><a class="dropdown-item" href="/news">News</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">News</a></li>
+                    <li><a class="dropdown-item" href="https://docs.google.com/forms/d/e/1FAIpQLScM3Jh6L9kgZnHwSybwpHzWlKA3rOGPg92Szm2KwhjIKDn0Yg/viewform">Survey</a></li>
                   </ul>
                 </li>
                 <li class="nav-item">
