--- a/views/layout.erb
+++ b/views/layout.erb
@@ -41,7 +41,8 @@
                     <li><a class="dropdown-item" href="/offer">Offers</a></li>
                     <li><a class="dropdown-item" href="/news">News</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="https://docs.google.com/forms/d/e/1FAIpQLScM3Jh6L9kgZnHwSybwpHzWlKA3rOGPg92Szm2KwhjIKDn0Yg/viewform">Survey</a></li>
+                    <li><a class="dropdown-item" href="https://docs.google.com/forms/d/e/1FAIpQLScM3Jh6L9kgZnHwSybwpHzWlKA3rOGPg92Szm2KwhjIKDn0Yg/viewform">Survey (EN)</a></li>
+                    <li><a class="dropdown-item" href="https://docs.google.com/forms/d/e/1FAIpQLSfhkID4JtbvZQqZrpNViO1CGLXcWjkMfQFrlgu0uN6TfX8d3A/viewform">Survey (ID)</a></li>
                   </ul>
                 </li>
                 <li class="nav-item">
@@ -67,6 +68,14 @@
       
       <!--Need this to have collapsed menu and "others" to work-->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+      
+      <!--Sinatra Flash-->
+      <% flash.keys.each do |type| %>
+        <div data-alert class="flash <%= type %> alert-box radius">
+          <%= flash[type] %>
+          <a href="#" class="close">&times;</a>
+        </div>
+      <% end %>
       
       <!--Contents respect to each erb-->
       <%= yield %>
