--- a/views/offer.erb
+++ b/views/offer.erb
@@ -1,10 +1,105 @@
 <!DOCTYPE html>
 
+<!--CSS-->
 <link rel="stylesheet" href="/css/style.css">
 <link rel="stylesheet" href="/css/offer.css">
+<link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css'>
+<!--JavaScript-->
+<script type='text/javascript' src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js'></script>
+<script type='text/javascript' src='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js'></script>
 
 <body class="main-layout">
-    <div class="mission_statement">
-        <p class="mission_font">The mission of Muzartt is to provide emotional and behavioral benefits for dementia patients and older adults through digital music and art therapy.</p>
+    <div class="pricing_all">
+        <div class="demo">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3 col-sm-6">
+                        <div class="pricingTable">
+                            <div class="pricingTable-header">
+                                <i class="fa fa-adjust"></i>
+                                <div class="price-value"> $10.00 <span class="month">per month</span> </div>
+                            </div>
+                            <h3 class="heading">Standard</h3>
+                            <div class="pricing-content">
+                                <ul>
+                                    <li><b>50GB</b> Disk Space</li>
+                                    <li><b>50</b> Email Accounts</li>
+                                    <li><b>50GB</b> Monthly Bandwidth</li>
+                                    <li><b>10</b> subdomains</li>
+                                    <li><b>15</b> Domains</li>
+                                </ul>
+                            </div>
+                            <div class="pricingTable-signup">
+                                <a href="/checkout">sign up</a>
+                            </div>
+                        </div>
+                    </div>
+        
+                    <div class="col-md-3 col-sm-6">
+                        <div class="pricingTable green">
+                            <div class="pricingTable-header">
+                                <i class="fa fa-briefcase"></i>
+                                <div class="price-value"> $20.00 <span class="month">per month</span> </div>
+                            </div>
+                            <h3 class="heading">Business</h3>
+                            <div class="pricing-content">
+                                <ul>
+                                    <li><b>60GB</b> Disk Space</li>
+                                    <li><b>60</b> Email Accounts</li>
+                                    <li><b>60GB</b> Monthly Bandwidth</li>
+                                    <li><b>15</b> subdomains</li>
+                                    <li><b>20</b> Domains</li>
+                                </ul>
+                            </div>
+                            <div class="pricingTable-signup">
+                                <a href="/checkout">sign up</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <div class="pricingTable blue">
+                            <div class="pricingTable-header">
+                                <i class="fa fa-diamond"></i>
+                                <div class="price-value"> $30.00 <span class="month">per month</span> </div>
+                            </div>
+                            <h3 class="heading">Premium</h3>
+                            <div class="pricing-content">
+                                <ul>
+                                    <li><b>70GB</b> Disk Space</li>
+                                    <li><b>70</b> Email Accounts</li>
+                                    <li><b>70GB</b> Monthly Bandwidth</li>
+                                    <li><b>20</b> subdomains</li>
+                                    <li><b>25</b> Domains</li>
+                                </ul>
+                            </div>
+                            <div class="pricingTable-signup">
+                                <a href="/checkout">sign up</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <div class="pricingTable red">
+                            <div class="pricingTable-header">
+                                <i class="fa fa-cube"></i>
+                                <div class="price-value"> $40.00 <span class="month">per month</span> </div>
+                            </div>
+                            <h3 class="heading">Extra</h3>
+                            <div class="pricing-content">
+                                <ul>
+                                    <li><b>80GB</b> Disk Space</li>
+                                    <li><b>80</b> Email Accounts</li>
+                                    <li><b>80GB</b> Monthly Bandwidth</li>
+                                    <li><b>25</b> subdomains</li>
+                                    <li><b>30</b> Domains</li>
+                                </ul>
+                            </div>
+                            <div class="pricingTable-signup">
+                                <a href="/checkout">sign up</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
