added offer and checkout page

--- a/views/offer.erb
+++ b/views/offer.erb
@@ -19,14 +19,14 @@
                                 <i class="fa fa-adjust"></i>
                                 <div class="price-value"> $10.00 <span class="month">per month</span> </div>
                             </div>
-                            <h3 class="heading">Standard</h3>
+                            <h3 class="heading">Monthly</h3>
                             <div class="pricing-content">
                                 <ul>
-                                    <li><b>50GB</b> Disk Space</li>
-                                    <li><b>50</b> Email Accounts</li>
-                                    <li><b>50GB</b> Monthly Bandwidth</li>
-                                    <li><b>10</b> subdomains</li>
-                                    <li><b>15</b> Domains</li>
+                                    <li><b>XX</b> smth smth</li>
+                                    <li><b>XX</b> smth smth</li>
+                                    <li><b>XX</b> smth smth</li>
+                                    <li><b>XX</b> smth smth</li>
+                                    <li><b>XX</b> smth smth</li>
                                 </ul>
                             </div>
                             <div class="pricingTable-signup">
@@ -39,16 +39,16 @@
                         <div class="pricingTable green">
                             <div class="pricingTable-header">
                                 <i class="fa fa-briefcase"></i>
-                                <div class="price-value"> $20.00 <span class="month">per month</span> </div>
+                                <div class="price-value"> $20.00 <span class="month">per year</span> </div>
                             </div>
-                            <h3 class="heading">Business</h3>
+                            <h3 class="heading">Yearly</h3>
                             <div class="pricing-content">
                                 <ul>
-                                    <li><b>60GB</b> Disk Space</li>
-                                    <li><b>60</b> Email Accounts</li>
-                                    <li><b>60GB</b> Monthly Bandwidth</li>
-                                    <li><b>15</b> subdomains</li>
-                                    <li><b>20</b> Domains</li>
+                                    <li><b>30-day</b> Free Trial</li>
+                                    <li><b>XX</b> smth smth</li>
+                                    <li><b>XX</b> smth smth</li>
+                                    <li><b>XX</b> smth smth</li>
+                                    <li><b>XX</b> smth smth</li>
                                 </ul>
                             </div>
                             <div class="pricingTable-signup">
@@ -62,14 +62,14 @@
                                 <i class="fa fa-diamond"></i>
                                 <div class="price-value"> $30.00 <span class="month">per month</span> </div>
                             </div>
-                            <h3 class="heading">Premium</h3>
+                            <h3 class="heading">Business</h3>
                             <div class="pricing-content">
                                 <ul>
-                                    <li><b>70GB</b> Disk Space</li>
-                                    <li><b>70</b> Email Accounts</li>
-                                    <li><b>70GB</b> Monthly Bandwidth</li>
-                                    <li><b>20</b> subdomains</li>
-                                    <li><b>25</b> Domains</li>
+                                    <li><b>XX</b> smth smth</li>
+                                    <li><b>XX</b> smth smth</li>
+                                    <li><b>XX</b> smth smth</li>
+                                    <li><b>XX</b> smth smth</li>
+                                    <li><b>XX</b> smth smth</li>
                                 </ul>
                             </div>
                             <div class="pricingTable-signup">
@@ -83,14 +83,14 @@
                                 <i class="fa fa-cube"></i>
                                 <div class="price-value"> $40.00 <span class="month">per month</span> </div>
                             </div>
-                            <h3 class="heading">Extra</h3>
+                            <h3 class="heading">Premium</h3>
                             <div class="pricing-content">
                                 <ul>
-                                    <li><b>80GB</b> Disk Space</li>
-                                    <li><b>80</b> Email Accounts</li>
-                                    <li><b>80GB</b> Monthly Bandwidth</li>
-                                    <li><b>25</b> subdomains</li>
-                                    <li><b>30</b> Domains</li>
+                                    <li><b>50+</b> Songs Installed</li>
+                                    <li><b>XX</b> smth smth</li>
+                                    <li><b>XX</b> smth smth</li>
+                                    <li><b>XX</b> smth smth</li>
+                                    <li><b>Limited</b> Muzartt Sticker</li>
                                 </ul>
                             </div>
                             <div class="pricingTable-signup">
