--- a/views/checkout.erb
+++ b/views/checkout.erb
@@ -12,9 +12,9 @@
 
 <div class="container">
     <div class="py-5 text-center">
-        <img class="d-block mx-auto mb-4" src="https://getbootstrap.com/docs/4.3/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-        <h2>Checkout form</h2>
-        <p class="lead">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
+        <img class="d-block mx-auto mb-4" src="/images/logo_new.png" alt="" width="200" height="60">
+        <h2>Muzartt Subscription Payment</h2>
+        <p class="lead">Please fill in the form below to join paid subscription for Muzartt! <br> Pre-orders are now available!</p>
     </div>
     <div class="row">
         <div class="col-md-4 order-md-2 mb-4">
@@ -25,29 +25,29 @@
             <ul class="list-group mb-3 sticky-top">
                 <li class="list-group-item d-flex justify-content-between lh-condensed">
                     <div>
-                        <h6 class="my-0">Product name</h6>
-                        <small class="text-muted">Brief description</small>
+                        <h6 class="my-0">Yearly Subscription</h6>
+                        <small class="text-muted">the full pack of enjoyment</small>
                     </div>
-                    <span class="text-muted">$12</span>
+                    <span class="text-muted">$70</span>
                 </li>
                 <li class="list-group-item d-flex justify-content-between lh-condensed">
                     <div>
-                        <h6 class="my-0">Second product</h6>
-                        <small class="text-muted">Brief description</small>
+                        <h6 class="my-0">30-day free trial</h6>
+                        <small class="text-muted">exclusively for yearly subscribers</small>
                     </div>
-                    <span class="text-muted">$8</span>
+                    <span class="text-muted">-$8</span>
                 </li>
                 <li class="list-group-item d-flex justify-content-between lh-condensed">
                     <div>
-                        <h6 class="my-0">Third item</h6>
-                        <small class="text-muted">Brief description</small>
+                        <h6 class="my-0">Muzartt Sticker</h6>
+                        <small class="text-muted">limited tine offer</small>
                     </div>
-                    <span class="text-muted">$5</span>
+                    <span class="text-muted">$0</span>
                 </li>
                 <li class="list-group-item d-flex justify-content-between bg-light">
                     <div class="text-success">
                         <h6 class="my-0">Promo code</h6>
-                        <small>EXAMPLECODE</small>
+                        <small>MUZARTTLOVE2021</small>
                     </div>
                     <span class="text-success">-$5</span>
                 </li>
