--- a/views/offer.erb
+++ b/views/offer.erb
@@ -9,6 +9,7 @@
 <script type='text/javascript' src='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js'></script>
 
 <body class="main-layout">
+    <p>Pre-Order Offers!</p>
     <div class="pricing_all">
         <div class="demo">
             <div class="container">
@@ -17,16 +18,16 @@
                         <div class="pricingTable">
                             <div class="pricingTable-header">
                                 <i class="fa fa-adjust"></i>
-                                <div class="price-value"> $10.00 <span class="month">per month</span> </div>
+                                <div class="price-value"> $8.99 <span class="month">per month</span> </div>
                             </div>
                             <h3 class="heading">Monthly</h3>
                             <div class="pricing-content">
                                 <ul>
-                                    <li><b>XX</b> smth smth</li>
-                                    <li><b>XX</b> smth smth</li>
-                                    <li><b>XX</b> smth smth</li>
-                                    <li><b>XX</b> smth smth</li>
-                                    <li><b>XX</b> smth smth</li>
+                                    <li><b>20+</b> Songs Installed</li>
+                                    <li><b>50+</b> Colors for Drawing</li>
+                                    <li><b>24H</b> Online Support</li>
+                                    <li><b>Unlock</b> App Features</li>
+                                    <li><b>.</b>.</li>
                                 </ul>
                             </div>
                             <div class="pricingTable-signup">
@@ -39,16 +40,16 @@
                         <div class="pricingTable green">
                             <div class="pricingTable-header">
                                 <i class="fa fa-briefcase"></i>
-                                <div class="price-value"> $20.00 <span class="month">per year</span> </div>
+                                <div class="price-value"> $95.88 <span class="month">per year</span> </div>
                             </div>
                             <h3 class="heading">Yearly</h3>
                             <div class="pricing-content">
                                 <ul>
                                     <li><b>30-day</b> Free Trial</li>
-                                    <li><b>XX</b> smth smth</li>
-                                    <li><b>XX</b> smth smth</li>
-                                    <li><b>XX</b> smth smth</li>
-                                    <li><b>XX</b> smth smth</li>
+                                    <li><b>$12</b> Cheaper than Monthly</li>
+                                    <li><b>Limited</b> Muzartt Badge</li>
+                                    <li><b>ALL</b> Benefits from Monthly Sub</li>
+                                    <li><b>.</b> .</li>
                                 </ul>
                             </div>
                             <div class="pricingTable-signup">
@@ -60,16 +61,16 @@
                         <div class="pricingTable blue">
                             <div class="pricingTable-header">
                                 <i class="fa fa-diamond"></i>
-                                <div class="price-value"> $30.00 <span class="month">per month</span> </div>
+                                <div class="price-value"> $249.99 <span class="month">per year</span> </div>
                             </div>
                             <h3 class="heading">Business</h3>
                             <div class="pricing-content">
                                 <ul>
-                                    <li><b>XX</b> smth smth</li>
-                                    <li><b>XX</b> smth smth</li>
-                                    <li><b>XX</b> smth smth</li>
-                                    <li><b>XX</b> smth smth</li>
-                                    <li><b>XX</b> smth smth</li>
+                                    <li><b>Offer</b> to Monthly Events</li>
+                                    <li><b>Special</b> Invitation to Live</li>
+                                    <li><b>Twice</b> per Month Online Meeting</li>
+                                    <li><b>Perfect</b> Sponsership</li>
+                                    <li><b>Reliable</b> Partnership</li>
                                 </ul>
                             </div>
                             <div class="pricingTable-signup">
@@ -81,16 +82,16 @@
                         <div class="pricingTable red">
                             <div class="pricingTable-header">
                                 <i class="fa fa-cube"></i>
-                                <div class="price-value"> $40.00 <span class="month">per month</span> </div>
+                                <div class="price-value"> $124.88 <span class="month">per month</span> </div>
                             </div>
                             <h3 class="heading">Premium</h3>
                             <div class="pricing-content">
                                 <ul>
                                     <li><b>50+</b> Songs Installed</li>
-                                    <li><b>XX</b> smth smth</li>
-                                    <li><b>XX</b> smth smth</li>
-                                    <li><b>XX</b> smth smth</li>
-                                    <li><b>Limited</b> Muzartt Sticker</li>
+                                    <li><b>100+</b> Colors for Drawing</li>
+                                    <li><b>Access</b> to Beta Version Available</li>
+                                    <li><b>Free</b> Muzartt Sticker</li>
+                                    <li><b>Limited</b> Muzartt T-shirt</li>
                                 </ul>
                             </div>
                             <div class="pricingTable-signup">
