added terms of service

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -38,6 +38,7 @@
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li><a class="dropdown-item" href="/mission_statement">Mission Statement</a></li>
+                    <li><a class="dropdown-item" href="/terms_of_service">Terms of Service</a></li>
                     <li><a class="dropdown-item" href="/offer">Offers</a></li>
                     <li><a class="dropdown-item" href="/news">News</a></li>
                     <li><hr class="dropdown-divider"></li>
