fixed spelling mistake

--- a/views/home.erb
+++ b/views/home.erb
@@ -41,7 +41,7 @@
       </div>
       <!--Sign-->
       <div class="sign">
-         <p>Sign up to gain special access to a sneak peak of what our app has to offer!↗</p>
+         <p>Sign up to gain special access to a sneak peek of what our app has to offer!↗</p>
       </div>
       <!-- header -->
       <header>
