added quotes for testimonials

--- a/views/home.erb
+++ b/views/home.erb
@@ -187,7 +187,7 @@
                <div class="row">
                   <div class="col-md-12">
                      <div class="titlepage">
-                        <h2>Testimonial</h2>
+                        <h2>Customer Testimonial</h2>
                         <span>Something something something.</span>
                      </div>
                   </div>
@@ -211,8 +211,8 @@
                   </div>
                   <div class="col-md-9">
                      <div class="Testimonial_box">
-                        <h4>Someone</h4>
-                        <p>Wonderful product.</p>
+                        <h4>Occupational Therapist</h4>
+                        <p>"Old music makes them happy, it not only allows (dementia patients) to be calm but also improves their mental states! Activities like dancing can improve their short term memory!"</p>
                      </div>
                   </div>
                </div>
@@ -230,8 +230,10 @@
                   </div>
                   <div class="col-md-9">
                      <div class="Testimonial_box">
-                        <h4>Someone</h4>
-                        <p>Wonderful product.</p>
+                        <h4>Caretaker</h4>
+                        <p>"My father is always agitated and paranoid, but when he listens to music, he is calm and I can see a smile on this face"
+                        <br>"I would love to be a part of Muzartt!"
+                        </p>
                      </div>
                   </div>
                </div>
@@ -249,8 +251,46 @@
                   </div>
                   <div class="col-md-9">
                      <div class="Testimonial_box">
-                        <h4>Someone</h4>
-                        <p>Wonderful product.</p>
+                        <h4>Activity Director for Alzheimer's Care</h4>
+                        <p>"Music and art are so very beneficial we use both at our facility to enhance our resident's lives."</p>
+                     </div>
+                  </div>
+               </div></p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="container">
+              <div class="carousel-caption">
+               <div class="row d_flex">
+                  <div class="col-md-3">
+                     <div class="Testimonial_box">
+                        <i><img src="images/chelo.jpg" alt="#"/></i>
+                     </div>
+                  </div>
+                  <div class="col-md-9">
+                     <div class="Testimonial_box">
+                        <h4>Occupational Therapist</h4>
+                        <p>"Music and art therapy not only enhances moods, but also boosts patients' short-term memory. Muzartt's features achieves this."</p>
+                     </div>
+                  </div>
+               </div></p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="container">
+              <div class="carousel-caption">
+               <div class="row d_flex">
+                  <div class="col-md-3">
+                     <div class="Testimonial_box">
+                        <i><img src="images/chelo.jpg" alt="#"/></i>
+                     </div>
+                  </div>
+                  <div class="col-md-9">
+                     <div class="Testimonial_box">
+                        <h4>Caretaker</h4>
+                        <p>"Muzartt's prototype looks amazing! I can't wait for their launch!"</p>
                      </div>
                   </div>
                </div></p>
