--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,7 +52,7 @@ body {
      font-family: "Times New Roman", Times, serif;
      font-style: italic;
      text-decoration: underline;
-     color: blue;
+     color: black;
 }
 
 a {
