--- a/views/home.erb
+++ b/views/home.erb
@@ -188,7 +188,7 @@
                   <div class="col-md-12">
                      <div class="titlepage">
                         <h2>Customer Testimonial</h2>
-                        <span>Something something something.</span>
+                        <span>.</span>
                      </div>
                   </div>
                </div>
